--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
 apply plugin: "kotlin"
 
 group 'com.bloxbean'
-version '0.9.0-SNAPSHOT'
+version '0.9.0-beta1'
 
 repositories {
     mavenCentral()
