--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
 apply plugin: "kotlin"
 
 group 'com.bloxbean'
-version '0.9.0-beta1'
+version '0.9.0-beta2'
 
 repositories {
     mavenCentral()
@@ -50,6 +50,10 @@ dependencies {
     }
 
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10")
+
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
